JumpScript/tests/baselines/reference/abstractClassInLocalScopeIsAbstract.errors.txt
tests/cases/compiler/abstractClassInLocalScopeIsAbstract.jump(4,5): error TS2511: Cannot create an instance of an abstract class.


==== tests/cases/compiler/abstractClassInLocalScopeIsAbstract.jump (1 errors) ====
    (() => {
        abstract class A {}
        class B extends A {}
        new A();
        ~~~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.
        new B();
    })()
    